# rtow

./: .env.cmake  .gitignore  .gitmodules  CMakeLists.txt  README.md  docker-compose.yaml  unixBuild.sh
src/: main.cpp
src/Camera/: Camera.cpp  Camera.h
src/Material/: Material.cpp  Material.h  STBImage.cpp  STBImage.h  Texture.h
src/Math/: Perlin.cpp  Perlin.h  Random.h  Ray.h  Timer.h  Utils.h  Vec.h  Vec3.h
src/Renderer/: Image.h  Renderer.cpp  Renderer.h
src/Scene/: AxisAlignedBox.cpp  AxisAlignedBox.h  AxisAlignedRect.cpp  AxisAlignedRect.h  BVHNode.cpp  BVHNode.h  BoundingVolume.cpp  BoundingVolume.h  Material.cpp  Material.h  Renderable.h  RenderableComponent.h  RenderableComponentList.cpp  RenderableComponentList.h  Scene.cpp  Scene.h  SceneComponent.cpp  SceneComponent.h  Scenes.h  Sphere.cpp  Sphere.h  Texture.h  Traceable.h  TraceableComponent.cpp  TraceableComponent.h
